# scripts

./: cleanbuilds.py  compare-builds  genpxe.py  release.py  replicate_github.py  setup.py  sign-release
dmx-lamps/: .gitignore  deploy  run-xvfb
dmx-lamps/libdmx/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  autogen.sh  configure.in  libdmx-config  libdmx-config.src.in  libdmx.pc.src.in  version-files
dmx-lamps/libdmx/app/: Makefile.am  dmx.c  dmxfind.c  find.c
dmx-lamps/libdmx/maintainer/: bootstrap  make_distn  tag  tidy
dmx-lamps/libdmx/src/: Makefile.am  dmx-head.h.in  dmx-tail.h  dmx.c  dmx.h  ext_prototypes.h  ftdi.c  ftdi.h  libdmx.c  project.h  prototypes.h  version.c
dmx-lamps/libdmx/test/: Makefile.am  test.c
infrastructure/xt/: decode_tag.py  find_build.py  generate_pxe_files.py  inspect_build.py  releases.py
ir-lamps/: .gitignore  99-lirc-lamp.rules  AUTHORS  Makefile  deploy  lirc.h  mce_reset.c  run-xvfb  xgetpixel.c
ir-lamps/mceusb-fix/: Makefile  deploy  dkms.conf  mceusb-transmitter-mask.patch
jamesbot/: .gitignore  AUTHORS  analyse  jamesbot
jira-bells/: deploy
jira-bells/apache/: bells
jira-bells/www/: bells.cgi
