dnl
dnl
dnl configure.in:
dnl
dnl $Id: configure.in,v 1.1 2011/01/13 17:42:27 root Exp $
dnl
dnl $Log: configure.in,v $
dnl Revision 1.1  2011/01/13 17:42:27  root
dnl *** empty log message ***
dnl
dnl
dnl
dnl

dnl
dnl Copyright (c) 2014 Citrix Systems, Inc.
dnl 
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2 of the License, or
dnl (at your option) any later version.
dnl 
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl 
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
dnl

AC_PREREQ(2.13)
AC_INIT(src/libdmx.c)

AC_PROG_CC
AC_SYS_LARGEFILE


LIBDMX_MAJOR_VERSION=`cat $srcdir/version-major`
LIBDMX_MINOR_VERSION=`cat $srcdir/version-minor`
LIBDMX_MICRO_VERSION=`cat $srcdir/version-micro`



LIBDMX_INTERFACE_VERSION_MIN=$LIBDMX_MINOR_VERSION
LIBDMX_INTERFACE_VERSION_MAX=$LIBDMX_MINOR_VERSION
LIBDMX_INTERFACE_REVISION=1

LIBDMX_VERSION=$LIBDMX_MAJOR_VERSION.$LIBDMX_MINOR_VERSION.$LIBDMX_MICRO_VERSION

AC_SUBST(LIBDMX_MAJOR_VERSION)
AC_SUBST(LIBDMX_MINOR_VERSION)
AC_SUBST(LIBDMX_MICRO_VERSION)
AC_SUBST(LIBDMX_VERSION)

AC_SUBST(LIBDMX_INTERFACE_VERSION_MIN)
AC_SUBST(LIBDMX_INTERFACE_VERSION_MAX)
AC_SUBST(LIBDMX_INTERFACE_REVISION)


LT_RELEASE=$LIBDMX_MAJOR_VERSION.$LIBDMX_MINOR_VERSION
LT_CURRENT=$LIBDMX_INTERFACE_VERSION_MAX
LT_REVISION=$LIBDMX_MICRO_VERSION
LT_AGE=`expr $LIBDMX_INTERFACE_VERSION_MAX - $LIBDMX_INTERFACE_VERSION_MIN`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

VERSION=$LIBDMX_VERSION
PACKAGE=libdmx

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_PROG_LIBTOOL

AM_CONFIG_HEADER(src/config.h)

AC_CHECK_PROG(MD5SUM,md5sum,md5sum)
AC_CHECK_PROG(GREP,grep,grep)
AC_CHECK_PROG(SED,sed,sed)
AC_PROG_AWK

dnl AC_DEFINE_UNQUOTED(LIBDMX_MAJOR_VERSION, $LIBDMX_MAJOR_VERSION)
dnl AC_DEFINE_UNQUOTED(LIBDMX_MINOR_VERSION, $LIBDMX_MINOR_VERSION)
dnl AC_DEFINE_UNQUOTED(LIBDMX_MICRO_VERSION, $LIBDMX_MICRO_VERSION)

AC_CHECK_HEADERS(fcntl.h malloc.h sys/ioctl.h unistd.h)
AC_CHECK_HEADERS(sys/scsi/impl/uscsi.h scsi/sg.h stdint.h)
AC_CHECK_HEADERS(sys/int_types.h string.h strings.h)
AC_CHECK_HEADERS(dirent.h sys/stat.h)

AC_C_INLINE
AC_C_CONST
AC_HEADER_TIME
AC_STRUCT_TM
AC_CHECK_FUNCS(select strdup strstr)

I2_TM_H=$ac_cv_struct_tm

I2_HAVE_STDINT_H=0
I2_HAVE_SYS_INT_TYPES_H=0
if test "$ac_cv_header_sys_int_types_h" = "yes"; then
	I2_HAVE_SYS_INT_TYPES_H=1
fi
if test "$ac_cv_header_stdint_h" = "yes"; then
	I2_HAVE_STDINT_H=1
fi
I2_HAVE_UNISTD_H=0
if test "$ac_cv_header_unistd_h" = "yes"; then
	I2_HAVE_UNISTD_H=1
fi

AC_SUBST(I2_TM_H)
AC_SUBST(I2_HAVE_STDINT_H)
AC_SUBST(I2_HAVE_SYS_INT_TYPES_H)
AC_SUBST(I2_HAVE_UNISTD_H)



AC_OUTPUT([Makefile 
	src/Makefile 
	src/dmx-head.h
	test/Makefile 
	app/Makefile
	libdmx.pc.src
	libdmx-config.src],[chmod +x libdmx-config.src])

